--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,48 @@
 security:
+
+    encoders:
+        # Our user class and the algorithm we'll use to encode passwords
+        # https://symfony.com/doc/current/security.html#c-encoding-the-user-s-password
+        AppBundle\Entity\Admin: plaintext
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory: { memory: ~ }
+        database_admins:
+            entity: { class: AppBundle:Admin, property: name }
+
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
+        admin_secured_area:
+            # this firewall applies to ^/admin URLs
+            pattern: ^/admin/
+
+                       # but the firewall does not require login on every page
+                       # denying access is done in access_control or in your controllers
             anonymous: true
+
+            provider: database_admins
+            # This allows the user to login by submitting a username and password
+            # Reference: https://symfony.com/doc/current/security/form_login_setup.html
+            form_login:
+                           # The route name that the login form submits to
+               check_path: security_admin_login
+                           # The name of the route where the login form lives
+                           # When the user tries to access a protected page, they are redirected here
+               login_path: security_admin_login
+                           # Secure the login form against CSRF
+                           # Reference: https://symfony.com/doc/current/security/csrf_in_login_form.html
+               csrf_token_generator: security.csrf.token_manager
+                           # The page users are redirect to when there is no previous page stored in the
+                           # session (for example when the users access directly to the login page).
+               username_parameter: _username
+               password_parameter: _password
+
+               default_target_path: site_index
+            logout:
+               # The route name the user can go to in order to logout
+               path: /logout
+               # The name of the route to redirect to after logging out
+               target: site_index
 
             # activate different ways to authenticate
 
