--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         database_admins:
-            entity: { class: AppBundle:Admin, property: name }
+            entity: { class: AppBundle:User, property: name }
 
     firewalls:
         admin_secured_area:
@@ -24,25 +24,25 @@ security:
             # This allows the user to login by submitting a username and password
             # Reference: https://symfony.com/doc/current/security/form_login_setup.html
             form_login:
-                           # The route name that the login form submits to
-               check_path: security_admin_login
-                           # The name of the route where the login form lives
-                           # When the user tries to access a protected page, they are redirected here
-               login_path: security_admin_login
-                           # Secure the login form against CSRF
-                           # Reference: https://symfony.com/doc/current/security/csrf_in_login_form.html
-               csrf_token_generator: security.csrf.token_manager
-                           # The page users are redirect to when there is no previous page stored in the
-                           # session (for example when the users access directly to the login page).
-               username_parameter: _username
-               password_parameter: _password
+                             # The route name that the login form submits to
+                 check_path: security_admin_login
+                             # The name of the route where the login form lives
+                             # When the user tries to access a protected page, they are redirected here
+                 login_path: security_admin_login
+                             # Secure the login form against CSRF
+                             # Reference: https://symfony.com/doc/current/security/csrf_in_login_form.html
+                 csrf_token_generator: security.csrf.token_manager
+                             # The page users are redirect to when there is no previous page stored in the
+                             # session (for example when the users access directly to the login page).
+                 username_parameter: _username
+                 password_parameter: _password
 
-               default_target_path: site_index
+                 default_target_path: site_index
             logout:
-               # The route name the user can go to in order to logout
-               path: /logout
-               # The name of the route to redirect to after logging out
-               target: site_index
+                 # The route name the user can go to in order to logout
+                 path: /logout
+                 # The name of the route to redirect to after logging out
+                 target: site_index
 
             # activate different ways to authenticate
 
